--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/index.js"></script>
+    <script src="/Katas-Javascript/index.js"></script>
 </body>
 </html>
